# ImageProcessing_Cpp

./: ByteReader.cpp  ByteReader.h  CMakeLists.txt  Color.cpp  Color.h  Descriptor.cpp  Descriptor.h  Image.cpp  Image.h  Mathematics.cpp  Mathematics.h  main.cpp
